# BBB_CANsniffer

./: .gitignore  HANDOFF.md  README.md
backend/: pyproject.toml
backend/can_sniffer/: alert_manager.py  behavioral_monitor.py  bus_load.py  correlator.py  diag_logger.py  diagnostics_aggregator.py  error_decoder.py  frame_store.py  latency_monitor.py  models.py  partial_frame_detector.py  pru_shm.py  sequence_export.py  server.py  signal_quality_monitor.py  socketcan_reader.py  system_health.py  tec_rec_poller.py  timing_stats.py  trigger_capture.py
backend/tests/: test_alert_manager.py  test_behavioral_monitor.py  test_bus_load.py  test_correlator.py  test_error_decoder.py
data/: .gitignore  latency_pairs.example.json
docs/: gcc-pru-on-bbb-lessons.md
dts/: BB-DCAN0-00A0.dts  BB-DCAN1-00A0.dts  BB-PRU0-CAN-TS-00A0.dts  Makefile
frontend/: app.js  graphs.js  index.html  style.css
hardware/: bom.csv
pru/pru0_fault_inject/: AM335x_PRU0.ld  Makefile  main.c  resource_table.h  shared_mem.h  startup.S
pru/pru0_timestamp/: AM335x_PRU0.ld  Makefile  main.c  resource_table.h  shared_mem.h  startup.S
pru/pru1_bitbang/: Makefile  main.c
scripts/: bootstrap.sh  deploy.sh  install_deps.sh  setup_can.sh  setup_can_mode.sh  setup_pru.sh  test_can1_tx.sh
systemd/: can-sniffer.service  pru-loader.service
tools/can_gen/: generator.py  setup_bbb2.sh
