[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "can-sniffer"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
    "python-can>=3.3",
    "fastapi",
    "uvicorn>=0.20",
    "websockets>=10",
    "cantools>=20.0",
    "aiosqlite>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
can-sniffer = "can_sniffer.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["can_sniffer*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
